--- a/Frontend/AwesomeProject/package.json
+++ b/Frontend/AwesomeProject/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-payment-icons": "^1.0.11",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
