--- a/Frontend/AwesomeProject/package.json
+++ b/Frontend/AwesomeProject/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
