--- a/Frontend/AwesomeProject/package.json
+++ b/Frontend/AwesomeProject/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-payment-icons": "^1.0.11",
     "react-native-safe-area-context": "^4.5.0",
