--- a/Frontend/AwesomeProject/package.json
+++ b/Frontend/AwesomeProject/package.json
@@ -15,6 +15,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "barcode-scanner": "^0.1.1",
+    "expo-image-picker": "^14.1.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1294.0",
